<resources>
    <string name="app_name">Covid Update</string>

    <string name="loading">Loading</string>
    <string name="error">Error</string>

    <string name="last_updated_date">Last updated date</string>
    <string name="global">Global</string>
    <string name="country">Country</string>

    <string name="new_confirmed">New Confirmed</string>
    <string name="total_confirmed">Total Confirmed</string>
    <string name="new_deaths">New Deaths</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="new_recovered">New Recovered</string>
    <string name="total_recovered">Total Recovered</string>
</resources>
