<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".home.presentation.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_black"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_label_last_updated_date"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_updated_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_last_updated_date"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_label_last_updated_date"
            tools:text="2020-01-01" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_layout_global"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_last_updated_date">

            <TextView
                android:id="@+id/text_view_label_global"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/global"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_label_new_confirmed_global"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_confirmed"
                app:layout_constraintEnd_toStartOf="@+id/text_view_new_confirmed_global"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_global" />

            <TextView
                android:id="@+id/text_view_new_confirmed_global"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="1000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_new_confirmed_global"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_global" />

            <TextView
                android:id="@+id/text_view_label_total_confirmed_global"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_confirmed"
                app:layout_constraintEnd_toStartOf="@+id/text_view_total_confirmed_global"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_new_confirmed_global" />

            <TextView
                android:id="@+id/text_view_total_confirmed_global"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="2000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_total_confirmed_global"
                app:layout_constraintTop_toBottomOf="@+id/text_view_new_confirmed_global" />

            <TextView
                android:id="@+id/text_view_label_new_deaths_global"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_deaths"
                app:layout_constraintEnd_toStartOf="@+id/text_view_new_deaths_global"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_total_confirmed_global" />

            <TextView
                android:id="@+id/text_view_new_deaths_global"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="2000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_new_deaths_global"
                app:layout_constraintTop_toBottomOf="@+id/text_view_total_confirmed_global" />

            <TextView
                android:id="@+id/text_view_label_total_deaths_global"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_deaths"
                app:layout_constraintEnd_toStartOf="@+id/text_view_total_deaths_global"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_new_deaths_global" />

            <TextView
                android:id="@+id/text_view_total_deaths_global"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="2000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_total_deaths_global"
                app:layout_constraintTop_toBottomOf="@+id/text_view_new_deaths_global" />

            <TextView
                android:id="@+id/text_view_label_new_recovered_global"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_recovered"
                app:layout_constraintEnd_toStartOf="@+id/text_view_new_recovered_global"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_total_deaths_global" />

            <TextView
                android:id="@+id/text_view_new_recovered_global"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="2000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_new_recovered_global"
                app:layout_constraintTop_toBottomOf="@+id/text_view_total_deaths_global" />

            <TextView
                android:id="@+id/text_view_label_total_recovered_global"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_recovered"
                app:layout_constraintEnd_toStartOf="@+id/text_view_total_recovered_global"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_new_recovered_global" />

            <TextView
                android:id="@+id/text_view_total_recovered_global"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="2000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_total_recovered_global"
                app:layout_constraintTop_toBottomOf="@+id/text_view_new_recovered_global" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_layout_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_global">

            <TextView
                android:id="@+id/text_view_label_country"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_label_new_confirmed_country"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_confirmed"
                app:layout_constraintEnd_toStartOf="@+id/text_view_new_confirmed_country"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_country" />

            <TextView
                android:id="@+id/text_view_new_confirmed_country"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="1000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_new_confirmed_country"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_country" />

            <TextView
                android:id="@+id/text_view_label_total_confirmed_country"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_confirmed"
                app:layout_constraintEnd_toStartOf="@+id/text_view_total_confirmed_country"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_new_confirmed_country" />

            <TextView
                android:id="@+id/text_view_total_confirmed_country"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="2000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_total_confirmed_country"
                app:layout_constraintTop_toBottomOf="@+id/text_view_new_confirmed_country" />

            <TextView
                android:id="@+id/text_view_label_new_deaths_country"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_deaths"
                app:layout_constraintEnd_toStartOf="@+id/text_view_new_deaths_country"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_total_confirmed_country" />

            <TextView
                android:id="@+id/text_view_new_deaths_country"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="2000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_new_deaths_country"
                app:layout_constraintTop_toBottomOf="@+id/text_view_total_confirmed_country" />

            <TextView
                android:id="@+id/text_view_label_total_deaths_country"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_deaths"
                app:layout_constraintEnd_toStartOf="@+id/text_view_total_deaths_country"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_new_deaths_country" />

            <TextView
                android:id="@+id/text_view_total_deaths_country"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="2000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_total_deaths_country"
                app:layout_constraintTop_toBottomOf="@+id/text_view_new_deaths_country" />

            <TextView
                android:id="@+id/text_view_label_new_recovered_country"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_recovered"
                app:layout_constraintEnd_toStartOf="@+id/text_view_new_recovered_country"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_total_deaths_country" />

            <TextView
                android:id="@+id/text_view_new_recovered_country"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="2000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_new_recovered_country"
                app:layout_constraintTop_toBottomOf="@+id/text_view_total_deaths_country" />

            <TextView
                android:id="@+id/text_view_label_total_recovered_country"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_recovered"
                app:layout_constraintEnd_toStartOf="@+id/text_view_total_recovered_country"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_new_recovered_country" />

            <TextView
                android:id="@+id/text_view_total_recovered_country"
                style="@style/TextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="2000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_total_recovered_country"
                app:layout_constraintTop_toBottomOf="@+id/text_view_new_recovered_country" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>